tools/pack200/Pack200Test.java crashes in the VM PIT jdk9 b79

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b81
    • Verified

        # SIGSEGV (0xb) at pc=0x0000007f7c2ce6fc, pid=23747, tid=0x0000000000005ce0
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-20150820144014.amurillo.jdk9-hs-2015-08--b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-20150820144014.amurillo.jdk9-hs-2015-08--b00, mixed mode, compressed oops, g1 gc, linux-aarch64)
        # Problematic frame:
        # V [libjvm.so+0x70e6fc] Node::uncast() const+0x4
        #
        --------------- S U M M A R Y ------------

        Command Line: -Dtest.src=/export/local/aurora/CommonData/j2se_jdk/jdk/test/tools/pack200 -Dtest.src.path=/export/local/aurora/CommonData/j2se_jdk/jdk/test/tools/pack200 -Dtest.classes=/export/local/aurora/sandbox/results/workDir/classes/tools/pack200 -Dtest.class.path=/export/local/aurora/sandbox/results/workDir/classes/tools/pack200 -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts=-Xmixed -server -Xmixed -Dtest.jdk=/export/local/aurora/CommonData/jdk -Dcompile.jdk=/export/local/aurora/CommonData/jdk -Dtest.timeout.factor=3.0 -Dtest.nativepath=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -Xmixed -Xmixed -Djava.library.path=/export/local/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED -Xmx1280m -Xshare:off com.sun.javatest.regtest.agent.MainWrapper /export/local/aurora/sandbox/results/workDir/classes/tools/pack200/Pack200Test.jta

        Host: AArch64 Processor rev 0 (aarch64), 8 cores, 15G, Ubuntu 14.04.3 LTS
        Time: Fri Aug 21 07:11:15 2015 PDT elapsed time: 42 seconds (0d 0h 0m 42s)

        --------------- T H R E A D ---------------

        Current thread (0x0000007f741de800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=23776, stack(0x0000007f1ca00000,0x0000007f1cb00000)]


        Current CompileTask:
        C2: 42189 847 % ! com.sun.java.util.jar.pack.PackageWriter::writeAttrDefs @ 37 (640 bytes)

        Stack: [0x0000007f1ca00000,0x0000007f1cb00000], sp=0x0000007f1cafac40, free space=1003k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x70e6fc] Node::uncast() const+0x4
        V [libjvm.so+0x780e98] PhaseIterGVN::transform_old(Node*)+0x9c
        V [libjvm.so+0x77ec94] PhaseIterGVN::optimize()+0x190
        V [libjvm.so+0x384288] Compile::Optimize()+0xb1c
        V [libjvm.so+0x384fdc] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0xc30
        V [libjvm.so+0x2cb924] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0xc8
        V [libjvm.so+0x38c74c] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x7d8
        V [libjvm.so+0x38d0cc] CompileBroker::compiler_thread_loop()+0x3f8
        V [libjvm.so+0x8620f8] JavaThread::thread_main_inner()+0xd4
        V [libjvm.so+0x862364] JavaThread::run()+0x23c
        V [libjvm.so+0x7297e0] java_start(Thread*)+0xc8
        C [libpthread.so.0+0x7e2c] start_thread+0xb0

              Assignee:
              Roland Westrelin
              Reporter:
              Dmitry Fazunenko (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: