8134321: tools/pack200/Pack200Test.java crashes in the VM PIT jdk9 b79

Code that capture field values of eliminated allocation at a safepoint when there's an arraycopy behind a Phi is broken

Reviewed-by: kvn